--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   },
   "homepage": "https://github.com/halfrice/complete-intro-to-react#readme",
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.15.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "parcel-bundler": "^1.12.2",
     "prettier": "^1.16.4"
   },
